# IEGenLib

./: .gitignore  CMakeLists.txt  Example.txt  Makefile  README  configure  gs.json  gs_csr.json  ilu.json  ilu_csr.json  sample.json  simplifyDriver.cc  simplifyDriver.cc~
.github/workflows/: c-cpp.yml  iegenlib.yml
data/: SpMM.json  gaxpy_csc.json  gs_bcsr.json  gs_csr.json  ic0_csr.json  ilu0.json  ilu_csr.json  leftCholesky_static.json  partialLeftLU_csc.json  sample.json
data/10 SpSpMUL/: SpMM.json  runscript.sh  smSmMul.c
data/11 Forward solve CSC/: forwSolCSC.json  runscript.sh
data/2 ILU0 CSR/: runscript.sh
data/4 IC0 CSR/: ic0_csr.json  runscript.sh
data/6 SpMV/: runscript.sh
data/7 leftCholesky CSC/: leftCholesky_static.json  runscript.sh
data/8 leftLU/: leftLU_static.json  runscript.sh
data/9 Forward solve CSR/: forwSolCSR.json
data/Forward-Solve_CSR/: runscript.sh
data/Gauss-Seidel_BCSR/: runscript.sh
data/Gauss-Seidel_CSR/: runscript.sh
data/IC0_CSR/: ic0.cpp
drivers/: maysat.cc  simplification.cc
lib/cloog/: aclocal.m4  cloog-isl-uninstalled.pc  cloog-isl-uninstalled.sh  configure  version.h
lib/cloog/doc/: gitversion.texi
lib/cloog/examples/example/: Makefile
lib/cloog/installed/include/isl/: stdint.h
lib/cloog/isl/: Makefile.in  aclocal.m4  configure  isl-uninstalled.pc  isl-uninstalled.sh  isl.pc
lib/cloog/isl/autom4te.cache/: output.0  output.1  traces.0  traces.1
lib/cloog/isl/doc/: Makefile.in
lib/cloog/isl/interface/: Makefile.in
lib/cloog/osl/: Makefile.in  aclocal.m4  configure
lib/cloog/osl/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
lib/cloog/osl/doc/: Makefile.in
lib/cloog/osl/tests/: Makefile.in
lib/gmp/: Makefile.in  aclocal.m4  configure  configure~
lib/gmp/cxx/: Makefile.in
lib/gmp/demos/: Makefile.in
lib/gmp/demos/calc/: Makefile.in
lib/gmp/demos/expr/: Makefile.in
lib/gmp/doc/: Makefile.in  gmp.info  gmp.info-1  gmp.info-2
lib/gmp/mpf/: Makefile.in
lib/gmp/mpn/: Makefile.in
lib/gmp/mpq/: Makefile.in
lib/gmp/mpz/: Makefile.in
lib/gmp/printf/: Makefile.in
lib/gmp/rand/: Makefile.in
lib/gmp/scanf/: Makefile.in
lib/gmp/tests/: Makefile.in
lib/gmp/tests/cxx/: Makefile.in
lib/gmp/tests/devel/: Makefile.in
lib/gmp/tests/misc/: Makefile.in
lib/gmp/tests/mpf/: Makefile.in
lib/gmp/tests/mpn/: Makefile.in
lib/gmp/tests/mpq/: Makefile.in
lib/gmp/tests/mpz/: Makefile.in
lib/gmp/tests/rand/: Makefile.in
lib/gmp/tune/: Makefile.in
lib/installed/include/: gmp.h
lib/installed/include/isl/: stdint.h
lib/installed/lib/: libisl.la
lib/installed/lib/pkgconfig/: isl.pc
lib/isl/: Makefile.in  aclocal.m4  configure  configure~
lib/isl/autom4te.cache/: output.1  requests  traces.0  traces.1
lib/isl/doc/: Makefile.in
lib/isl/interface/: Makefile.in
src/: .sparse_format_test.cc.swp  CMakeLists.txt  chillusage_test.cc  cpp_api_example.cc  iegenlib.h  islpr.cc  sparse_format_test.cc
src/computation/: CompGraph.cc  CompGraph.h  Computation.cc  Computation.h  SSA.cc  SSA.cpp  SSA.h  SSA_test.cc  SSA_test.cpp  computation_test.cc
src/drivers/: Computation_driver.cc  detectUnsatDatalogDriver.cc  setRel.cc  simplifyDriver.cc  simplifyDriver_IE.cc  subSetDriver.cc
src/parser/: gen_parser.cc  gen_parser.hh  gen_scanner.cc  parser.l  parser.y  parser_test.cc
src/parser/jsoncons/: json_parser.hpp.orig  json_serializer.hpp
src/set_relation/: .set_relation.h.swp  SubMap.cc  SubMap.h  TermPartOrdGraph.cc  TermPartOrdGraph.h  TermPartOrdGraph_test.cc  TupleDecl.cc  TupleDecl.h  UFCallMap.cc  UFCallMap.h  UFCallMapAndBounds.cc  UFCallMapAndBounds.h  UFCallMapAndBounds_test.cc  UFCallMap_test.cc  UninterpFunc.cc  UninterpFunc.h  Visitor.h  VisitorChangeUFsForOmega.cc  VisitorChangeUFsForOmega.h  complexityForPartialParallel.cc  complexityForPartialParallel_test.cc  detectUnsatOrFindEqualities_test.cc  environment.cc  environment.h  environment_test.cc  expression.cc  expression.h  expression_test.cc  isl_str_manipulation.cc  isl_str_manipulation.h  isl_str_manipulation_test.cc  normalization_test.cc  reOrdTV_OmegaCodeGen.cc  reOrdTV_OmegaCodeGen_test.cc  setRelationship.cc  setRelationship_test.cc  set_relation.cc  set_relation.cc~  set_relation.h  set_relation_test.cc  (+4 more)
src/util/: PartOrdGraph.cc  PartOrdGraph.h  PartOrdGraph_test.cc  jsonHelper.cc  jsonHelper.h  util.cc  util.h  util_test.cc
texinfo-6.8/: Makefile  config.h  pre-inst-env
texinfo-6.8/Pod-Simple-Texinfo/: Makefile  pod2texi
texinfo-6.8/doc/: Makefile  info-stnd.info  texinfo.info  texinfo.info-1  texinfo.info-2  texinfo.info-3
texinfo-6.8/doc/tp_api/: Makefile
texinfo-6.8/gnulib/lib/: Makefile  fcntl.h  locale.h  stdio.h  stdlib.h  string.h  unistd.h  wchar.h  wctype.h
texinfo-6.8/info/: Makefile  doc.c  funs.h  ginfo  makedoc
texinfo-6.8/install-info/: Makefile  ginstall-info
texinfo-6.8/install-info/tests/: Makefile  defs
texinfo-6.8/js/: Makefile
texinfo-6.8/man/: Makefile
texinfo-6.8/po/: Makefile  POTFILES
texinfo-6.8/po_document/: Makefile  POTFILES
texinfo-6.8/texindex/: Makefile  texindex
texinfo-6.8/tp/: Makefile  defs  texi2any
texinfo-6.8/tp/Texinfo/XS/: Makefile  MiscXS.la  Parsetexi.la  TestXS.la  XSParagraph.la  config.h  libtool
texinfo-6.8/tp/maintain/: catalog.xml
texinfo-6.8/tp/tests/: Makefile
texinfo-6.8/tp/tests/contents/: Makefile
texinfo-6.8/tp/tests/formatting/: Makefile
texinfo-6.8/tp/tests/indices/: Makefile
texinfo-6.8/tp/tests/layout/: Makefile
texinfo-6.8/tp/tests/many_input_files/: Makefile
texinfo-6.8/tp/tests/nested_formats/: Makefile
texinfo-6.8/tp/tests/sectioning/: Makefile
texinfo-6.8/tp/tests/tex_html/: Makefile
texinfo-6.8/util/: Makefile  txixml2texi
tutorial/: CMakeLists.txt  COOtoCSR.cc  append_computation_example.cc  array_example.cc  codegen_cont_driver.cc  computation_example.cc  executor.cc  geoac_codegen_driver.cc  geoac_example.cc  macro_testing.cc  manual_graph_testing.cc  miniFluxDiv_codegen_driver.cc  mttkrp.cc  parflowio.cc  parflowio_full.cpp  sparse_format_example.cc
(+13 files in other folders)
